add libcommand and plugin name in registries

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,7 @@ main: pl.serweron.serweronLib.SerweronLib
 api-version: '${pluginAPI}'
 authors: [MasnyPen]
 website: serweron.pl
+
+permissions:
+  serweronlib.admin:
+    default: op
