Readme description and workflow trigger to release

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,8 @@
 name: Build & Publish
 
 on:
-  push:
-    branches: [ main ]
-    tags: [ 'v*' ]
+  release:
+    types: [created]
   workflow_dispatch:
 
 jobs:
